@@ -19,7 +19,6 @@ require 'mkmf'
 require 'pkg-config'
 
 PKGConfig.have_package('glib-2.0') or show_fail
-PKGConfig.have_package('gdk-pixbuf-2.0') or show_fail
 PKGConfig.have_package('clutter-0.8') or show_fail
 
 find_header("rbgobject.h", *$:) or show_fail
